--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+
 }
 
 
@@ -20,6 +21,8 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        buildConfigField "String", "KAKAO_API_KEY", properties['kakao_rest_api_key']
     }
 
     buildTypes {
@@ -40,6 +43,8 @@ android {
     }
     buildFeatures{
         viewBinding = true
+        dataBinding = true
+        buildConfig = true
     }
 }
 
@@ -54,6 +59,7 @@ dependencies {
     implementation("androidx.fragment:fragment-ktx:1.6.1")
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
+    implementation 'com.github.bumptech.glide:glide:4.16.0'
 
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
 }
